--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- to configure a non-root public URL by running `npm run build`.
-    -->
+    <link
+      href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
+      rel="stylesheet"
+    />
     <title>Github Finder</title>
   </head>
   <body>
